--- a/src/features/profile/components/MutualDialog.module.css
+++ b/src/features/profile/components/MutualDialog.module.css
@@ -65,8 +65,9 @@
 }
 
 .rateInput {
-  width: 80px;
+  width: 60px;
   text-align: center;
+  flex-shrink: 0;
 }
 
 .removeBtn {
